manifests/grocy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grocy
  template:
    metadata:
      labels:
        name: grocy
    spec:
      containers:
      - name: grocy
        imagePullPolicy: Always
        image: linuxserver/grocy:latest
        ports:
          - containerPort: 9283
        volumeMounts:
          - name: db
            mountPath: /var/www/data
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: grocy
