manifests/grocy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: smarthome
spec:
  selector:
    app: grocy
  ports:
  - port: 80
    targetPort: 80
